--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link href="./ressources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+   <h1 id="TopHeader">Discover hidden places in the world around you</h1>
+   <a href="#TopHeader">Download Excursion (Coming soon!)</a><br><br>
+   <video width="300" height="500" autoplay="autoplay">
+     <source src="/Ressources/excursion.mp4" type="video/mp4">
+     <p>If you are reading this, it is because your browser does not support the HTML5 video element.</p>
+   </video>
   </body>
 </html>
