--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Excursion</title>
-    <link href="./ressources/css/style.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-   <h1 id="TopHeader">Discover hidden places in the world around you</h1>
-   <a href="#TopHeader">Download Excursion (Coming soon!)</a><br><br>
-   <video width="300" height="500" autoplay="autoplay">
-     <source src="/Ressources/excursion.mp4" type="video/mp4">
-     <p>If you are reading this, it is because your browser does not support the HTML5 video element.</p>
-   </video>
-  </body>
+ <head>
+   <link href="./ressources/css/style.css" type="text/css" rel="stylesheet">
+   <title>Excursion</title>
+ </head>
+ <body>
+   <h1>Discover hidden places in the world around you</h1>
+   <a href="./index.html" class="link">Download Excursion (Coming soon!)</a>
+   <br>
+   <br>
+   <video autoplay muted loop>
+   <source src="./ressources/video/excursion.mp4" type="video/mp4">
+   <p>If you are reading this, it is because your browser does not support the HTML5 video element.</p>
+ </video>
+   <h2>Your personal travel guide</h2>
+   <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+   <img src="./ressources/image/camp.jpg" alt="tent">
+   <br>
+   <br>
+   <img src="./ressources/image/phone.png" alt="cellphone icon">
+   <h2>Coming Soon for iPhone and Android</h2>
+   <a href="./index.html" class="link">Download Excursion (Coming soon!)</a>
+   <p align="right">© Excursion</p>
+ </body>
 </html>
