Readable for github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <link href="./ressources/css/style.css" type="text/css" rel="stylesheet">
+   <link href="./Ressources/css/style.css" type="text/css" rel="stylesheet">
    <title>Excursion</title>
  </head>
  <body>
@@ -10,15 +10,15 @@
    <br>
    <br>
    <video autoplay muted loop>
-   <source src="./ressources/video/excursion.mp4" type="video/mp4">
+   <source src="./Ressources/Video/excursion.mp4" type="video/mp4">
    <p>If you are reading this, it is because your browser does not support the HTML5 video element.</p>
  </video>
    <h2>Your personal travel guide</h2>
    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-   <img src="./ressources/image/camp.jpg" alt="tent">
+   <img src="./Ressources/Image/camp.jpg" alt="tent">
    <br>
    <br>
-   <img src="./ressources/image/phone.png" alt="cellphone icon">
+   <img src="./Ressources/Image/phone.png" alt="cellphone icon">
    <h2>Coming Soon for iPhone and Android</h2>
    <a href="./index.html" class="link">Download Excursion (Coming soon!)</a>
    <p align="right">© Excursion</p>
