Readable for github II

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <link href="./Ressources/css/style.css" type="text/css" rel="stylesheet">
+   <link href="./Ressources/CSS/style.css" type="text/css" rel="stylesheet">
    <title>Excursion</title>
  </head>
  <body>
